--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,16 @@
   </head>
   <body>
    <%= render 'layouts/header' %>
-   
+   <% flash.each do |message_type, message| %>
+    
+       <div class="alert alert-<%= message_type %>"><%= message %></div>
+      <% end %>
+
     <div class="container">
       <%= yield %>
     </div>
      <%= render 'layouts/footer' %>
+     <%= debug(params) if Rails.env.development? %>
   </body>
 
 </html>
