--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,15 +3,13 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@user, url: signup_path) do |f| %>
-    
-     <%= render 'shared/error_messages' %>
+    <%= form_for(@user) do |f| %>
+      <%= render 'shared/error_messages', object: f.object %>
       <%= f.label :name %>
-       <%= f.text_field :name, class: 'form-control' %>
+      <%= f.text_field :name, class: 'form-control' %>
 
       <%= f.label :email %>
       <%= f.email_field :email, class: 'form-control' %>
-
 
       <%= f.label :password %>
       <%= f.password_field :password, class: 'form-control' %>
